<resources>
    <string name="app_name">بامداد</string>
    <string name="widget_name">بامداد</string>
    <string name="widget_mini_name">بامداد (کوچک)</string>
    <string name="latitude">عرض جغرافیایی</string>
    <string name="longitude">طول جغرافیایی</string>
    <string name="settings">تنظیمات</string>
    <string name="exit">خروج</string>
    <string name="enable_persian_digits">نمایش عددها به فارسی</string>
    <string name="persian_digits">عددهای فارسی</string>
    <string name="showing_clock_on_widget">نمایش ساعت در ابزارک</string>
    <string name="clock_on_widget">ساعت در ابزارک</string>
    <string name="showing_clock_in_24"> نمایش ساعت به صورت ۲۴ تایی</string>
    <string name="clock_in_24">۲۴ ساعته</string>
    <string name="about">درباره</string>
    <string name="gpl_logo">نشان پروانهٔ جامع همگانی گنو</string>
    <string name="widget_text_colors">رنگ متن ابزارک</string>
    <string name="clock">ساعت</string>
    <string name="date">تاریخ</string>
    <string name="date_converter">تبدیل تاریخ</string>
    <string name="logo">نشان</string>
    <string name="dari_months">ماه‌های دری</string>
    <string name="enable_dari">فعال کردن ماه‌های دری</string>
    <string name="widget_notification_dashclock">ابزارک، نوار آگاهی و دش‌کلاک</string>
    <string name="general">عمومی</string>
    <string name="widget_text_color">رنگ نوشته‌های ابزارک</string>
    <string name="select_widgets_text_color">انتخاب رنگ دل‌خواه برای نوشته‌های ابزارک</string>
    <string name="pray_times_calculation_setting">تنظیمات محاسبهٔ اوقات شرعی و قبله‌نما</string>
    <string name="notify_date">فعال کردن آگاهی</string>
    <string name="enable_notify">آگاهی همیشگی از تاریخ‌ها، اعمال غیرفعال‌سازی آن نیاز به خاموش و روشن کردن دستگاه دارد</string>
    <string name="select_skin">انتخاب پوسته</string>
    <string name="skin">پوسته</string>
    <string name="pray_methods">شیوه‌های محاسبه</string>
    <string name="pray_methods_calculation">شیوه‌های محاسبهٔ اوقات شرعی</string>
    <string name="altitude">ارتفاع</string>
    <string name="altitude_praytime">به متر (اختیاری)</string>
    <string name="gps_location">دریافت مختصات از جی‌پی‌اس یا شبکه</string>
    <string name="gps_location_help">اگر از این طریق ممکن باشد، به سایر تنظیمات این بخش نیاز نیست</string>
    <string name="location">موقعیت</string>
    <string name="location_help">اگر در فهرست نبود، مختصات را وارد کنید</string>
    <string name="showing_iran_time">نمایش ابزارک‌ها، نوار آگاهی و برنامه به وقت ایران در همه‌جا</string>
    <string name="iran_time">وقت ایران</string>
    <string name="qibla_compass">قطب‌نما/قبله‌نما</string>
    <string name="compass">قطب‌نما</string>
    <string name="compass_not_found">حسگر قطب‌نما پیدا نشد</string>
    <string name="month_names">نام ماه‌ها</string>
    <string name="calendar_font">قلم تقویم</string>
    <string name="application_language">زبان برنامه</string>
    <string name="language">زبان</string>
    <string name="calendar_language">زبان تقویم</string>
    <string name="calendar_language_summary">زبانی که ماه‌ها و روزها به آن نمایش داده می‌شوند</string>
    <string name="version">نگارش</string>
    <string name="calendar_font_summary">تغییر قلم تقویم</string>
    <string name="athan">اذان</string>
    <string name="athan_alarm_summary">برای این نمازها اذان گفته شود</string>
    <string name="athan_alarm">اذان‌ها</string>
    <string name="athan_sound">صدای اذان</string>
    <string name="match_system">تطبیق با سامانه</string>
    <string name="athan_volume_summary">تنظیم حجم صدای اذان</string>
    <string name="athan_volume">حجم صدا</string>
    <string name="athan_singer_summary">با کلیک کردن بر روی این گزینه صدای موذن را انتخاب کنید.</string>
    <string name="athan_singer">صدای موذن</string>
    <string name="tap_to_stop_athan">برای توقف اذان ضربه بزنید</string>
    <string name="playing_athan">در حال پخش اذان</string>
    <string name="athan_disabled_summary">برای فعال کردن تنظیمات اذان، مکانی را از فهرست برگزیده، یا مشخصات موقعیتتان را وارد کنید</string>
    <string name="athan_gap">فاصلهٔ بین اذان واقعی و اذان برنامه</string>
    <string name="athan_gap_summary">چند دقیقه پیش از اذان، هشدار به صدا در آورده شود</string>
    <string name="closeDrawer">بستن</string>
    <string name="openDrawer">گشودن</string>
    <string name="azan1">اذان صبح</string>
    <string name="azan2">اذان ظهر</string>
    <string name="azan3">عصر</string>
    <string name="azan4">اذان مغرب</string>
    <string name="azan5">عشاء</string>
    <string name="aftab1">طلوع آفتاب</string>
    <string name="aftab2">غروب آفتاب</string>
    <string name="aftab3">نیمه‌شب شرعی</string>
    <string name="owghat">اوقات شرعی</string>
    <string name="events">رویداد‌ها</string>
    <string name="today">امروز</string>
    <string name="select_type_date">گزینش گونهٔ تاریخ</string>
    <string name="year">سال</string>
    <string name="mount">ماه</string>
    <string name="day">روز</string>
    <string name="select_year">گزینش سال</string>
    <string name="select_mount">گزینش ماه</string>
    <string name="select_day">گزینش روز</string>
    <string name="date_exception">تاریخ وارد شده اشتباه است!</string>
    <string name="in_city_time">به افق</string>
    <string name="islamic_offset">تنظیم تقویم اسلامی</string>
    <string name="islamic_offset_summary">بازگشت برای اصلاح تقویم</string>
    <string-array name="calendar_type">
        <item>هجری شمسی</item>
        <item>هجری قمری</item>
        <item>میلادی</item>
    </string-array>
    <string name="date_copied_clipboard">به حافظه رونوشت شد</string>
    <string name="stop">توقف</string>
    <string name="goto_date">برو به تاریخ</string>
    <string name="select">انتخاب</string>
    <string name="pleasewaitgps">کمی درنگ کنید… اگر پس از یک دقیقه نتیجه‌ای حاصل نشد احتمالاً باید گزینه‌های دیگر را بیازمایید</string>
    <string name="moazen_title">انتخاب صدای موذن</string>
    <string name="tornado" translatable="false">&#xf021;</string>
    <string name="tropical_storm" translatable="false">&#xf021;</string>
    <string name="hurricane" translatable="false">&#xf021;</string>
    <string name="severe_thunderstorms" translatable="false">&#xf019;</string>
    <string name="mixed_rain_and_snow" translatable="false">&#xf019;</string>
    <string name="mixed_rain_and_sleet" translatable="false">&#xf019;</string>
    <string name="mixed_snow_and_sleet" translatable="false">&#xf019;</string>
    <string name="freezing_drizzle" translatable="false">&#xf019;</string>
    <string name="drizzle" translatable="false">&#xf019;</string>
    <string name="freezing_rain" translatable="false">&#xf019;</string>
    <string name="showers" translatable="false">&#xf019;</string>
    <string name="snow_flurries" translatable="false">&#xf01b;</string>
    <string name="light_snow_showers" translatable="false">&#xf01b;</string>
    <string name="blowing_snow" translatable="false">&#xf01b;</string>
    <string name="snow" translatable="false">&#xf01b;</string>
    <string name="hail" translatable="false">&#xf019;</string>
    <string name="sleet" translatable="false">&#xf019;</string>
    <string name="dust" translatable="false">&#xf002;</string>
    <string name="foggy" translatable="false">&#xf014;</string>
    <string name="haze" translatable="false">&#xf014;</string>
    <string name="smoky" translatable="false">&#xf014;</string>
    <string name="blustery" translatable="false">&#xf021;</string>
    <string name="windy" translatable="false">&#xf021;</string>
    <string name="cold" translatable="false">&#xf021;</string>
    <string name="cloudy" translatable="false">&#xf013;</string>
    <string name="mostly_cloudy_night" translatable="false">&#xf031;</string>
    <string name="mostly_cloudy_day" translatable="false">&#xf002;</string>
    <string name="partly_cloudy_night" translatable="false">&#xf031;</string>
    <string name="partly_cloudy_day" translatable="false">&#xf002;</string>
    <string name="clear_night" translatable="false">&#xf02e;</string>
    <string name="sunny" translatable="false">&#xf00d;</string>
    <string name="fair_night" translatable="false">&#xf031;</string>
    <string name="fair_day" translatable="false">&#xf00c;</string>
    <string name="mixed_rain_and_hail" translatable="false">&#xf019;</string>
    <string name="hot" translatable="false">&#xf00d;</string>
    <string name="isolated_thunderstorms" translatable="false">&#xf019;</string>
    <string name="scattered_thunderstorms" translatable="false">&#xf019;</string>
    <string name="scattered_showers" translatable="false">&#xf019;</string>
    <string name="heavy_snow" translatable="false">&#xf01b;</string>
    <string name="scattered_snow_showers" translatable="false">&#xf01b;</string>
    <string name="partly_cloudy" translatable="false">&#xf00c;</string>
    <string name="thundershowers" translatable="false">&#xf019;</string>
    <string name="snow_showers" translatable="false">&#xf00c;</string>
    <string name="isolated_thundershowers" translatable="false">&#xf019;</string>
    <string name="not_available" translatable="false">&#xf00c;</string>
    <string name="preference_notification_category" translatable="false">تنظیمات یادآور</string>
    <string name="checkbox_vibrate" translatable="false">ویبره</string>
    <string name="checkbox_sound" translatable="false">انتخاب صدا</string>
    <string name="checkbox_LED" translatable="false">چراغ گوشی</string>
    <string name="checkbox_ongoing" translatable="false">نوتیفیکیشن چسبنده</string>
    <string name="checkbox_ongoing_dis" translatable="false">در صورتی که به عنوان انجام شده نشانه گذاری نشود</string>
    <string name="snooze" translatable="false">صبر</string>
    <string name="snooze_detail" translatable="false">اعلام پیغام کمی بعد از رد کردن آن</string>
    <string name="snooze_length" translatable="false">میزان صبر</string>
    <string name="minute" translatable="false">دقیقه</string>
    <string name="minutes" translatable="false">دقیقه</string>
    <string name="mark_as_done" translatable="false">انجام شد</string>
    <string name="mark_as_done_detail" translatable="false">اضافه کردن گزینه ی انجام شد به نوتیفیکیشن</string>
    <string name="nagging_reminder" translatable="false">یاد آواره سمج</string>
    <string name="nagging_detail" translatable="false">تا زمانی که گزینه ی انجام شد کلیک نشود به شما یاد آوری میکند</string>
    <string name="nagging_interval" translatable="false">یاد آواره سمج</string>
    <string name="settings_screen_interface">رابط کاربری</string>
    <string name="settings_screen_notifications">نوتیفیکیشن</string>
    <string name="settings_screen_navigation">نویگیشن</string>
    <string name="settings_screen_data">داده ها</string>
    <string name="settings_category_preferences">تنظیمات</string>
    <string name="settings_simple_calendar">تقویم ساده و زمان</string>
    <string name="settings_simple_calendar_summary">با استفاده از رابط کاربری اندروید برای انتخاب تاریخ / زمان، به جای رابط کاربری گوگل</string>
    <string name="settings_text_size">اندازه متن</string>
    <string name="settings_screen_behaviors">رفتار نرم افزار</string>
    <string name="settings_fab_expansion_behavior">دکمه شناور</string>
    <string name="settings_fab_expansion_behavior_summary_on">کلیک کردن کوتاه بر روی دکمه شناور باز کردن نوشته</string>
    <string name="settings_fab_expansion_behavior_summary_off">کلیک کردن کوتاه بر روی دکمه شناور باز کردن منو</string>
    <string name="label_spent_today">خرج امروز</string>
    <string name="label_this_week">خرج ماهانه</string>
    <string name="label_this_month">خرج سالانه</string>
    <string name="label_spent_the_most">بیشترین هزینه‌های امروز</string>
    <string name="appName">زمان نماز گزار</string>
    <string name="asr">عصر</string>
    <string name="fajr">اذان صبح</string>
    <string name="ishaa">عشاء</string>
    <string name="kerahatTime">زمان کراهت</string>
    <string name="maghrib">اذان مغرب</string>
    <string name="sun">طلوع آفتاب</string>
    <string name="zuhr">اذان ظهر</string>
</resources>