<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.byagowi.persiancalendar.view.preferences.ShapedPreferenceCategory
        android:title="@string/general">

        <com.byagowi.persiancalendar.view.preferences.ShapedCheckBoxPreference
            android:defaultValue="true"
            android:key="PersianDigits"
            android:summary="@string/enable_persian_digits"
            android:title="@string/persian_digits" />

        <com.byagowi.persiancalendar.view.preferences.ShapedListPreference
            android:defaultValue="0"
            android:entries="@array/islamicOffsetNames"
            android:entryValues="@array/islamicOffsetKeys"
            android:key="islamicOffset"
            android:summary="@string/islamic_offset_summary"
            android:title="@string/islamic_offset" />

    </com.byagowi.persiancalendar.view.preferences.ShapedPreferenceCategory>

    <com.byagowi.persiancalendar.view.preferences.ShapedPreferenceCategory
        android:title="@string/widget_notification_dashclock">

        <com.byagowi.persiancalendar.view.preferences.ShapedCheckBoxPreference
            android:defaultValue="true"
            android:key="NotifyDate"
            android:summary="@string/enable_notify"
            android:title="@string/notify_date" />

        <com.byagowi.persiancalendar.view.preferences.ShapedListPreference
            android:defaultValue="#ffffffff"
            android:entries="@array/colorNames"
            android:entryValues="@array/colorKeys"
            android:key="SelectedWidgetTextColor"
            android:summary="@string/select_widgets_text_color"
            android:title="@string/widget_text_color" />

        <com.byagowi.persiancalendar.view.preferences.ShapedCheckBoxPreference
            android:defaultValue="false"
            android:key="IranTime"
            android:summary="@string/showing_iran_time"
            android:title="@string/iran_time" />

        <com.byagowi.persiancalendar.view.preferences.ShapedCheckBoxPreference
            android:defaultValue="true"
            android:key="WidgetClock"
            android:summary="@string/showing_clock_on_widget"
            android:title="@string/clock_on_widget" />

        <com.byagowi.persiancalendar.view.preferences.ShapedCheckBoxPreference
            android:defaultValue="true"
            android:key="WidgetIn24"
            android:summary="@string/showing_clock_in_24"
            android:title="@string/clock_in_24" />

    </com.byagowi.persiancalendar.view.preferences.ShapedPreferenceCategory>

</android.support.v7.preference.PreferenceScreen>
